--- a/.github/workflows/build-and-push-docker-images.yaml
+++ b/.github/workflows/build-and-push-docker-images.yaml
@@ -26,10 +26,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push (amd64)
         uses: docker/build-push-action@v4
         with:
-          context: .
-          platforms: linux/amd64,linux/arm64
+          file: "{context}/Dockerfile.amd64"
+          platforms: linux/amd64
+          push: true
+          tags: nagaseyami/chatgpt-telegram-bot:latest
+
+      - name: Build and push (arm64)
+        uses: docker/build-push-action@v4
+        with:
+          file: "{context}/Dockerfile.arm64"
+          platforms: linux/arm64
           push: true
           tags: nagaseyami/chatgpt-telegram-bot:latest
