--- a/.github/workflows/build-and-push-docker-images.yaml
+++ b/.github/workflows/build-and-push-docker-images.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Build and push (amd64)
         uses: docker/build-push-action@v4
         with:
-          file: "{context}/Dockerfile.amd64"
+          file: Dockerfile.amd64
           platforms: linux/amd64
           push: true
           tags: nagaseyami/chatgpt-telegram-bot:latest
@@ -37,7 +37,7 @@ jobs:
       - name: Build and push (arm64)
         uses: docker/build-push-action@v4
         with:
-          file: "{context}/Dockerfile.arm64"
+          file: Dockerfile.arm64
           platforms: linux/arm64
           push: true
           tags: nagaseyami/chatgpt-telegram-bot:latest
