--- a/.github/workflows/build-and-push-docker-images.yaml
+++ b/.github/workflows/build-and-push-docker-images.yaml
@@ -46,6 +46,4 @@ jobs:
 
       - name: Push image
         run: |
-          docker buildx imagetools create \
-            --tag docker.io/nagaseyami/chatgpt-telegram-bot:latest \
-            nagaseyami/chatgpt-telegram-bot:latest
+          docker push nagaseyami/chatgpt-telegram-bot:latest
