--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -7,4 +7,4 @@ RUN dotnet publish "chatgpt-telegram-bot.csproj" -c Release -o ./publish -r linu
 FROM mcr.microsoft.com/dotnet/runtime-deps:7.0-alpine AS runtime
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "chatgpt-telegram-bot.dll"]
+ENTRYPOINT ["./chatgpt-telegram-bot"]
