--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,17 @@ type: docker
 name: build and push docker image
 
 steps:
-  - name: greeting
-    image: alpine
+  - name: build and push
+    image: docker
+    environment:
+      DOCKERHUB_USERNAME:
+        from_secret: DOCKERHUB_USERNAME
+      DOCKERHUB_TOKEN:
+        from_secret: DOCKERHUB_TOKEN
     commands:
-      - ls -al
+      - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
+      - docker buildx create --name my-builder --platform linux/arm64,linux/amd64 --use
+      - docker buildx inspect my-builder --bootstrap
+      - docker buildx build --file Dockerfile.arm64 --platform linux/arm64 --tag nagaseyami/chatgpt-telegram-bot:latest .
+      - docker buildx build --file Dockerfile.arm64 --platform linux/arm64 --tag nagaseyami/chatgpt-telegram-bot:latest .
+      - docker push nagaseyami/chatgpt-telegram-bot:latest
