--- a/.drone.yml
+++ b/.drone.yml
@@ -1,32 +1,45 @@
+# kind: pipeline
+# type: exec
+# name: build and push docker image
+
+# platform:
+#   os: linux
+#   arch: amd64
+
+# trigger:
+#   branch:
+#     - main
+#   event:
+#     - push
+
+# clone:
+#   depth: 1
+#   retries: 3
+
+# steps:
+#   - name: build and push
+#     environment:
+#       DOCKERHUB_USERNAME:
+#         from_secret: DOCKERHUB_USERNAME
+#       DOCKERHUB_TOKEN:
+#         from_secret: DOCKERHUB_TOKEN
+#     commands:
+#       - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
+#       - docker buildx create --name my-builder --platform linux/arm64,linux/amd64 --use
+#       - docker buildx inspect my-builder --bootstrap
+#       - docker buildx build --file Dockerfile.arm64 --platform linux/arm64 --tag nagaseyami/chatgpt-telegram-bot:latest .
+#       - docker buildx build --file Dockerfile.arm64 --platform linux/arm64 --tag nagaseyami/chatgpt-telegram-bot:latest .
+#       - docker push nagaseyami/chatgpt-telegram-bot:latest
+
 kind: pipeline
 type: exec
-name: build and push docker image
+name: default
 
 platform:
   os: linux
   arch: amd64
 
-trigger:
-  branch:
-    - main
-  event:
-    - push
-
-clone:
-  depth: 1
-  retries: 3
-
 steps:
-  - name: build and push
-    environment:
-      DOCKERHUB_USERNAME:
-        from_secret: DOCKERHUB_USERNAME
-      DOCKERHUB_TOKEN:
-        from_secret: DOCKERHUB_TOKEN
+  - name: greeting
     commands:
-      - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
-      - docker buildx create --name my-builder --platform linux/arm64,linux/amd64 --use
-      - docker buildx inspect my-builder --bootstrap
-      - docker buildx build --file Dockerfile.arm64 --platform linux/arm64 --tag nagaseyami/chatgpt-telegram-bot:latest .
-      - docker buildx build --file Dockerfile.arm64 --platform linux/arm64 --tag nagaseyami/chatgpt-telegram-bot:latest .
-      - docker push nagaseyami/chatgpt-telegram-bot:latest
+      - echo hello world
