--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,6 @@
 kind: pipeline
-type: exec
+type: docker
 name: build and push docker image
-
-platform:
-  os: linux
-  arch: amd64
 
 trigger:
   branch:
@@ -18,6 +14,8 @@ clone:
 
 steps:
   - name: build and push
+    image: docker:dind
+    privileged: true
     environment:
       DOCKERHUB_USERNAME:
         from_secret: DOCKERHUB_USERNAME
