--- a/.drone.yml
+++ b/.drone.yml
@@ -14,15 +14,13 @@ clone:
 
 steps:
   - name: build and push
-    image: docker:dind
-    privileged: true
-    environment:
-      DOCKERHUB_USERNAME:
+    image: plugins/docker
+    settings:
+      username:
         from_secret: DOCKERHUB_USERNAME
-      DOCKERHUB_TOKEN:
+      password:
         from_secret: DOCKERHUB_TOKEN
     commands:
-      - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
       - docker buildx create --name my-builder --platform linux/arm64,linux/amd64 --use
       - docker buildx inspect my-builder --bootstrap
       - docker buildx build --file Dockerfile.arm64 --platform linux/arm64 --tag nagaseyami/chatgpt-telegram-bot:latest .
