--- a/.drone.yml
+++ b/.drone.yml
@@ -14,13 +14,15 @@ clone:
 
 steps:
   - name: build and push
-    image: plugins/docker
-    settings:
-      username:
+    image: docker:dind
+    privileged: true
+    environment:
+      DOCKERHUB_USERNAME:
         from_secret: DOCKERHUB_USERNAME
-      password:
+      DOCKERHUB_TOKEN:
         from_secret: DOCKERHUB_TOKEN
     commands:
+      - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
       - docker buildx create --name my-builder --platform linux/arm64,linux/amd64 --use
       - docker buildx inspect my-builder --bootstrap
       - docker buildx build --file Dockerfile.arm64 --platform linux/arm64 --tag nagaseyami/chatgpt-telegram-bot:latest .
