--- a/.drone.yml
+++ b/.drone.yml
@@ -15,6 +15,9 @@ clone:
 steps:
   - name: build and push
     image: docker:dind
+    volumes:
+      - name: dockersock
+        path: /var/run
     privileged: true
     environment:
       DOCKERHUB_USERNAME:
@@ -26,3 +29,15 @@ steps:
       - docker buildx create --name my-builder --platform linux/arm64,linux/amd64 --use
       - docker buildx build --file Dockerfile.amd64 --platform linux/amd64 --tag nagaseyami/chatgpt-telegram-bot:latest .
       - docker buildx build --file Dockerfile.arm64 --platform linux/arm64 --tag nagaseyami/chatgpt-telegram-bot:latest . --push
+
+services:
+  - name: docker
+    image: docker:dind
+    privileged: true
+    volumes:
+      - name: dockersock
+        path: /var/run
+
+volumes:
+  - name: dockersock
+    temp: {}
