--- a/.drone.yml
+++ b/.drone.yml
@@ -31,7 +31,7 @@ steps:
       - docker buildx build --platform linux/amd64,linux/arm64 --tag $DOCKERHUB_USERNAME/chatgpt-telegram-bot:latest . --push
 
 services:
-  - name: docker
+  - name: docker service
     image: docker:dind
     privileged: true
     volumes:
@@ -59,5 +59,6 @@ steps:
     commands:
       - git config --global user.name [Bot]Drone
       - git config --global user.email drone@nagaseyami.com
-      - git remote add github "https://git:${GITHUB_ACCESS_TOKEN}@github.com/NagaseYami/chatgpt-telegram-bot.git"
+      - echo ${GITHUB_ACCESS_TOKEN}
+      - git remote add github https://git:${GITHUB_ACCESS_TOKEN}@github.com/NagaseYami/chatgpt-telegram-bot.git
       - git push github --force-with-lease --verbose
