--- a/.drone.yml
+++ b/.drone.yml
@@ -54,11 +54,15 @@ steps:
   - name: git
     image: drone/git:latest
     environment:
+      DOCKERHUB_USERNAME:
+        from_secret: DOCKERHUB_USERNAME
+      DOCKERHUB_TOKEN:
+        from_secret: DOCKERHUB_TOKEN
       GITHUB_ACCESS_TOKEN:
         from_secret: GITHUB_ACCESS_TOKEN
     commands:
       - git config --global user.name [Bot]Drone
       - git config --global user.email drone@nagaseyami.com
-      - echo ${GITHUB_ACCESS_TOKEN}
+      - echo ${DOCKERHUB_USERNAME}
       - git remote add github https://git:${GITHUB_ACCESS_TOKEN}@github.com/NagaseYami/chatgpt-telegram-bot.git
       - git push github --force-with-lease --verbose
