--- a/.drone.yml
+++ b/.drone.yml
@@ -54,10 +54,12 @@ steps:
   - name: git
     image: drone/git:latest
     environment:
+      GITHUB_USERNAME:
+        from_secret: GITHUB_USERNAME
       GITHUB_ACCESS_TOKEN:
         from_secret: GITHUB_ACCESS_TOKEN
     commands:
       - git config --global user.name [Bot]Drone
       - git config --global user.email drone@nagaseyami.com
-      - git remote add github https://git:${GITHUB_ACCESS_TOKEN}@github.com/NagaseYami/chatgpt-telegram-bot.git
+      - git remote add github https://${GITHUB_USERNAME}:${GITHUB_ACCESS_TOKEN}@github.com/NagaseYami/chatgpt-telegram-bot.git
       - git push github --force-with-lease --verbose
