--- a/.drone.yml
+++ b/.drone.yml
@@ -26,9 +26,9 @@ steps:
         from_secret: DOCKERHUB_TOKEN
     commands:
       - sleep 5
-      - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
+      - docker login -u ${DOCKERHUB_USERNAME} -p ${DOCKERHUB_TOKEN}
       - docker buildx create --platform linux/amd64,linux/arm64 --use
-      - docker buildx build --platform linux/amd64,linux/arm64 --tag $DOCKERHUB_USERNAME/chatgpt-telegram-bot:latest . --push
+      - docker buildx build --platform linux/amd64,linux/arm64 --tag ${DOCKERHUB_USERNAME}/chatgpt-telegram-bot:latest . --push
 
 services:
   - name: docker service
