--- a/.drone.yml
+++ b/.drone.yml
@@ -61,6 +61,6 @@ steps:
     commands:
       - git config --global user.name [Bot]Drone
       - git config --global user.email drone@nagaseyami.com
-      - git remote add github https://$GITHUB_USERNAME:$GITHUB_ACCESS_TOKEN@github.com/$GITHUB_USERNAME/chatgpt-telegram-bot.git --verbose
+      - git remote add github https://$GITHUB_USERNAME:$GITHUB_ACCESS_TOKEN@github.com/$GITHUB_USERNAME/chatgpt-telegram-bot.git
       - git fetch github --verbose
       - git push github --force-with-lease --verbose
