--- a/.drone.yml
+++ b/.drone.yml
@@ -27,6 +27,8 @@ steps:
       GITEA_ACCESS_TOKEN:
         from_secret: GITEA_ACCESS_TOKEN
     commands:
+      - apk update
+      - apk add git
       - export IMAGE=$(basename "$(git rev-parse --show-toplevel)")
       - sleep 5
       - docker login -u $GITEA_USERNAME -p $GITEA_ACCESS_TOKEN REGISTRY
